--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "customize-cra": "^0.2.12",
     "date-fns": "^2.6.0",
     "dayjs": "^1.10.4",
-    "draft-js": "0.10.5",
-    "draftjs-to-html": "^0.8.4",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
-    "html-to-draftjs": "1.4.0",
+    "html-to-draftjs": "^1.5.0",
     "i18next": "^18.0.1",
     "i18next-browser-languagedetector": "^4.0.0",
     "i18next-xhr-backend": "^3.2.0",
@@ -28,7 +28,7 @@
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
-    "react-draft-wysiwyg": "^1.13.2",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-i18next": "^11.0.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
